--- a/Dasar Pemrograman Web/style.css
+++ b/Dasar Pemrograman Web/style.css
@@ -1,80 +1,110 @@
 body{
     margin: 0 auto;
-    /* border: 1px solid; */
     height: auto; 
-    width: 60%;
+    width: 70%;
+    background-image: url("Background.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 .Header{
-    background: chartreuse;
     padding: 2px;
-    border-bottom: 1px solid;
+    border-bottom: 2px solid;
 }
 .Header p{
-    /* padding: 20px; */
     text-align: center;
-    font-size: 12px;
-    font-style: bold;
+    font-size: 25px;
+    font-weight: bold;
 }
 .Navigasi {
-    background: yellow;
     height: 50px;
-    border: 1px solid;
+    border-bottom: 2px solid;
 }
 .Navigasi a {
     margin: 11px 10px 0px 10px;
     float: right;
+    color:black;
+    text-decoration:none;
+    font-weight: bold;
+    font-size: 20px;
 }
 .Navigasi a.right {
     float: right;
 }
 .Navigasi a:hover {
-    background-color: white;
+    /* background-color: white; */
     color: aqua;
 }
 .Container{
-    /* height: 450px; */
-    border: 1px solid;
-    background: cyan;
-    margin: auto;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     overflow: auto;
 }
 .Container h2{
     padding: 2px;
     text-align: center;
 }
-/* .foto{
-    height: 200px;
+.conten{
     float: left;
-    padding: 10px auto;
-    margin: 0 0 10px 5px;
-    border: 1px solid;
+    width: 81%;
+    text-align: center;
+    margin: auto;
+    padding: auto;
+}
+.conten p{
+    padding: auto;
+    font-size: 16px; 
+    float: left; 
+    overflow-wrap: break-word;
+    text-align: justify;
+}
+img.sosmed{
+    float: left;
+    height: 50px;
+    width: auto;
     border-radius: 30%;
-} */
+    margin: 4px;
+}
+
 img{
     height: 200px;
     width: auto;
     padding:10px;
     border-radius: 30%;
     float: left;
+    margin: auto;
+}
+
+.Contact{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    width: 81%;
+}
+.Contact h2{
+    padding: 2px;
+    text-align: center;
 }
 .text{
     float: left;
-    width: 75%;
+    text-align: left;
+    width: 100%;
     padding: 10px auto;
     margin: 10px;
-    border: 1px solid;
-    background: pink;
     overflow-wrap: break-word;
 }
+
 .text tr td{
-    
+    border-bottom: 1px solid;
 }
 .Footer{
-    margin: auto;
     text-align: center;
     height: 50px;
-    padding: 10px 20px;
+    padding: 0 20px;
+    margin-bottom: 30px;
     clear: both;
-    border: 1px solid;
-    background: burlywood;
+    border-top: 2px solid;
+    font-size: 12px;
+    font-weight: bold;
 }   
