--- a/Dasar Pemrograman Web/style.css
+++ b/Dasar Pemrograman Web/style.css
@@ -1,14 +1,25 @@
+html{
+    margin: 0;
+    padding: 0;
+ }
+ 
+ .halaman{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+ }
+ 
+ .bagian{
+    width: 100%;
+ }
+
 body{
     margin: 0 auto;
     height: auto; 
-    width: 80%;
+    width: 90%;
     background-image: url("img/Background.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
-}
-.box{
-    padding:auto;
-    margin:auto;
 }
 .Header{
     padding: 2px;
@@ -22,6 +33,8 @@ body{
 .Navigasi {
     height: 50px;
     border-bottom: 2px solid;
+    padding-right: 3%;
+    line-height: 25px;
 }
 .Navigasi a {
     margin: 11px 10px 0px 10px;
@@ -29,16 +42,17 @@ body{
     color:black;
     text-decoration:none;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
 }
 .Navigasi a.right {
     float: right;
 }
 .Navigasi a:hover {
-    /* background-color: white; */
     color: aqua;
+    cursor: pointer;
 }
 .Container{
+    width: 100%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
@@ -47,13 +61,26 @@ body{
 .Container h2{
     padding: 2px;
     text-align: center;
+    font-size: 3vw;
+}
+.foto{
+    width: 20%;
+    padding: auto;
+}
+.foto img{
+    height: auto;
+    width: 100%;
+    padding: 10px;
+    border-radius: 30%;
+    float: left;
+    margin: auto;
 }
 .conten{
     float: left;
-    width: 81%;
+    width: 80%;
     text-align: center;
     margin: auto;
-    padding: auto;
+    padding: 0 5px;
 }
 .conten p{
     padding: auto;
@@ -68,17 +95,8 @@ img.sosmed{
     width: auto;
     border-radius: 30%;
     margin: 4px;
+    cursor: pointer;
 }
-
-img{
-    height: 200px;
-    width: auto;
-    padding:10px;
-    border-radius: 30%;
-    float: left;
-    margin: auto;
-}
-
 .Contact{
     text-align: center;
     margin-left: auto;
@@ -106,9 +124,70 @@ img{
     text-align: center;
     height: 50px;
     padding: 0 20px;
+    margin-top: 20px;
     margin-bottom: 30px;
     clear: both;
     border-top: 2px solid;
     font-size: 12px;
     font-weight: bold;
-}   
+}
+/*full screen desktop*/
+@media screen and (max-width:3840px){
+    .Container{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        overflow: hidden;
+    }
+    .foto{
+        width: 15%;
+    }
+    .conten{
+        width:80%;
+    }
+}
+
+/*untuk layar device berukuran besar*/
+@media screen and (max-width: 1000px) {
+    body{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .bagian {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .Container {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        overflow: hidden;
+    }
+    .foto{
+        width: 100%;
+        border-radius: 30%;
+    }
+    .foto img{
+        width: 20%;
+        border-radius: 47%; 
+        padding-left: 50%;
+        padding-right: 50%;
+        margin-left: -10%;
+        margin-right: -10%; 
+    }
+    .conten{
+        width: 100%;
+        margin: 0;
+        padding: 0; 
+    }
+    .text{
+        width: 90%;
+        padding: 0 5%;
+    }
+    .conten p{
+        width: 90%;
+        padding: 0 5%;
+    }
+ }
